MDL-42711 theme port from LM: MDLSITE-2480 fixed up course view - icon now positioned correctly when long course titles wrap on small screens

--- a/theme/bootstrapbase/less/moodle/responsive.less
+++ b/theme/bootstrapbase/less/moodle/responsive.less
@@ -424,6 +424,26 @@
   div[role=main] {
       margin-bottom: 2em;
   }
+    .coursebox {
+        .info {
+            .name {
+                a {
+                    background-position: 0 13px;
+                }
+            }
+        }
+    }
+    .category-browse {
+        .coursebox {
+            .info {
+                .name {
+                    a {
+                        background-position: 0 13px;
+                    }
+                }
+            }
+        }
+    }
 }
 
 // All widths between 1200px and 1600px
